--- a/src/app.html
+++ b/src/app.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Weather Plants</title>
+    <title>Weather Pot</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
