Adds "Warm White" with default color theme

--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <title>Weather Pot</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    %sveltekit.head%
-  </head>
-  <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
-  </body>
+<html lang="en" data-theme="default">
+	<head>
+		<title>Weather Pot</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="mobile-web-app-capable" content="yes" />
+		%sveltekit.head%
+	</head>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
