WIP: Adds meta tags for IOS PWA capabilities

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,14 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="mobile-web-app-capable" content="yes" />
 		<link rel="manifest" href="manifest.json" />
+		<meta name="description" content="Weather Pot - Weather embodied" />
+		<meta name="theme-color" content="#FF945E" />
+
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-title" content="Weather Pot" />
+		<link rel="apple-touch-icon" href="/static/icons/icon-small.png" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
