--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="Weather Pot" />
-		<link rel="apple-touch-icon" href="/static/icons/icon-small.png" />
+		<link rel="apple-touch-icon" href="/icons/icon-large.png" />
 
 		%sveltekit.head%
 	</head>
