--- a/src/app.html
+++ b/src/app.html
@@ -4,15 +4,19 @@
 		<title>Weather Pot</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="mobile-web-app-capable" content="yes" />
 		<meta name="description" content="Weather Pot - Weather embodied" />
 		<meta name="theme-color" content="#FF945E" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 
+		<!-- PWA Manifest -->
+		<meta name="mobile-web-app-capable" content="yes" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+
+		<!-- Safari Meta Tags -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="Weather Pot" />
-		<link rel="apple-touch-icon" href="/icons/icon-large.png" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
 
 		%sveltekit.head%
 	</head>
