Fixes build error with fetching document during ssr

--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,7 @@
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 
 		<!-- Safari Meta Tags -->
+		<meta name="theme-color" content="#000000" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="Weather Pot" />
