--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<meta name="description" content="Weather Pot - Weather embodied" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 
 		<!-- PWA Manifest -->
 		<meta name="mobile-web-app-capable" content="yes" />
@@ -16,7 +16,8 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="Weather Pot" />
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/icons/icon-180x180.png" />
+		<link rel="apple-touch-startup-image" href="%sveltekit.assets%/splash.png" />
 
 		%sveltekit.head%
 	</head>
