--- a/src/app.html
+++ b/src/app.html
@@ -12,12 +12,12 @@
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 
 		<!-- Safari Meta Tags -->
-		<meta name="theme-color" content="#000000" />
+		<meta name="theme-color" content="#ffffff" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<meta name="apple-mobile-web-app-title" content="Weather Pot" />
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/icons/icon-180x180.png" />
-		<link rel="apple-touch-startup-image" href="%sveltekit.assets%/splash.png" />
+		<link rel="apple-touch-icon" href="/icons/icon-180x180.png" />
+		<link rel="apple-touch-startup-image" href="/splash.png" />
 
 		%sveltekit.head%
 	</head>
