--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,10 @@
 		<title>Weather Pot</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+		/>
 		<meta name="description" content="Weather Pot - Weather embodied" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 
